maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: identifier expected but 'var' found.
def keepHandOnSideWall(sommeAngle:var) = {
                                  ^Escaper:31: error: ')' expected but '}' found.
}
^