maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle:Int = 0
  while (!estSurBiscuit()) {
    keepHandOnSideWall(sommeAngle)
  }
}

def keepHandOnSideWall(sommeAngle:var) = {
    while (estFaceMur()) {
      droite()
      sommeAngle -= 1
    }
  	avance()
  	gauche()
  	sommeAngle += 1
}

def isDirectionFree(dir:Direction):Boolean = {
  var dirActu = getDirection()
  setDirection(dir)
  if (estFaceMur()) {
    setDirection(dirActu)
    return false
  } else {
    setDirection(dirActu)
    return true
  }
}